# aioimmich

./: .pre-commit-config.yaml  README.md  docs  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yaml  test.yml
aioimmich/: __init__.py  api.py  models.py
aioimmich/albums/: __init__.py
aioimmich/assets/: models.py
aioimmich/jobs/: __init__.py  models.py
aioimmich/people/: __init__.py
aioimmich/search/: __init__.py
aioimmich/server/: __init__.py
aioimmich/tags/: __init__.py
aioimmich/users/: models.py
docs/: aioimmich.html  index.html  search.js
docs/aioimmich/: albums.html  api.html  assets.html  const.html  exceptions.html  people.html  search.html  server.html  tags.html  users.html
docs/aioimmich/albums/: models.html
docs/aioimmich/assets/: models.html
docs/aioimmich/people/: models.html
docs/aioimmich/server/: models.html
docs/aioimmich/tags/: models.html
docs/aioimmich/users/: models.html
html/aioimmich/: api.html  const.html  exceptions.html  index.html
html/aioimmich/albums/: index.html  models.html
html/aioimmich/assets/: index.html  models.html
html/aioimmich/people/: index.html  models.html
tests/: __init__.py  conftest.py  const.py  test_aioimmich.py  test_albums.py  test_assets.py  test_jobs.py  test_people.py  test_search.py  test_server.py  test_tags.py  test_users.py
tests/__snapshots__/: test_albums.ambr  test_jobs.ambr  test_people.ambr  test_search.ambr  test_server.ambr  test_tags.ambr  test_users.ambr
(+7 files in other folders)
