[build-system]
requires = ["setuptools==80.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "aioimmich"
version = "0.4.0"
description = "Asynchronous library to fetch albums and assests from immich."
authors = [{ name = "mib1185" }]
readme = "README.md"
license.text = "Apache-2.0"
requires-python = '>=3.9'
dependencies = ["aiohttp"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = 'https://github.com/mib1185/aioimmich'
repository = 'https://github.com/mib1185/aioimmich'

[tool.setuptools]
package-data = { "aioimmich" = ["py.typed", "*.py", "**/*.py"] }
platforms = ["any"]
packages = ["aioimmich"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
